otp-533: Fix wrapping on home page and display full description differently
In some browsers on some systems the wrapping of the project name did
not break properly. This should be fixed now.

Also introduce and use expandableText TagLib tag to display project
description instead of tooltip.

--- a/grails-app/assets/stylesheets/otp.less
+++ b/grails-app/assets/stylesheets/otp.less
@@ -1344,10 +1344,13 @@ td div {
 
 .table-with-fixed-header {
     overflow-y: auto;
-    max-height: 40ch;
+    max-height: 80ch;
     thead th {
         position: sticky;
         top: 0;
+    }
+    td {
+        padding-right: 15px;
     }
 }
 .home {
@@ -1367,7 +1370,7 @@ td div {
         width: 25%;
     }
     td:nth-child(1) {
-        line-break: anywhere;
+        overflow-wrap: break-word;
     }
 }
 
